--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Branch Repo</title>
-
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Here I will learn git branch</h1>
     <h3>We learn git branch, merge branch</h3>
+    <p>now updated or edited</p>
     <img src="12.png" alt="">
 </body>
 </html>
