--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Here I will learn git branch</h1>
     <h3>We learn git branch, merge branch</h3>
     <p>now updated or edited</p>
+    <h3>new branch added and updated</h3>
     <img src="12.png" alt="">
 </body>
 </html>
